--- a/index.html
+++ b/index.html
@@ -448,6 +448,8 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
                         <a href="https://github.com/binDebug3/Datalog-Compiler">View Code</a>
                     </div>
                     <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
 
                 <div class="project shadow-large">
                     <div class="project-image">
@@ -472,9 +474,9 @@ I've worked on lots of awesome projects I am passionate about in addition to tho
                         <a href="https://github.com/binDebug3/tab=repositories">View GitHub</a>
                     </div>
                     <!-- End .project-info -->
-
                 </div>
                 <!-- End .project -->
+
 
             </div>
         </div>
