--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ I've worked on lots of awesome projects I am passionate about in addition to tho
 	    <li>Kalman Filters</li>
             <li>Optimization Techniques</li>
             <li>Mathematical Analysis</li>
-	    <li>Particale Filters</li>
+	    <li>Particle Filters</li>
             <li>Data Structures</li>
             <li>Discrete Structures</li>
             <li>Dynamic Programming</li>
