--- a/index.html
+++ b/index.html
@@ -465,15 +465,15 @@ I've worked on lots of awesome projects I am passionate about in addition to tho
     <a href="https://github.com/binDebug3/EVAdoption">Electric Vehicle Adoption</a> |
     <a href="https://github.com/binDebug3/CarKalmanFilter">Automatic Road Quality Detection</a> |
     <a href="https://github.com/binDebug3/ColorCorrection">Color Correcting Images</a> |
-    <a href="https://github.com/binDebug3/https://github.com/binDebug3/minGPT">Mini Chat-GPT</a> |
-    <a href="https://github.com/binDebug3/NYC%20Drive%20Time%20Prediction">NYC Drive Time Prediction</a> |
+    <a href="https://github.com/binDebug3/minGPT">Mini Chat-GPT</a> |
+    <a href="https://github.com/binDebug3/NYC_Taxi_Trip_Duration">NYC Drive Time Prediction</a> |
     <a href="https://github.com/binDebug3/Cool_Math/blob/main/Machine%20Learning/Speech%20Recognition/speechrecognition.ipynb">Speech Recognition</a> |
     <a href="https://github.com/binDebug3/Cool_Math/blob/main/Predictive%20Modeling/ObstacleAvoidance/ObstacleAvoidance.ipynb">Obstacle Avoidance</a> |
     <a href="https://github.com/binDebug3/Cool_Math/tree/main/Optimization/Wordle%20Solver">Wordle Solver</a>
                         </p>
                         <p>
                         </p>
-                        <a href="https://github.com/binDebug3/tab=repositories">View GitHub</a>
+                        <a href="https://github.com/binDebug3?tab=repositories">View GitHub</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
