--- a/index.html
+++ b/index.html
@@ -147,11 +147,20 @@ ACME is a unique and intensive intersection of advanced mathematics,
         <div id="experience-timeline">
 
             <div data-date="July 2024 – Present">
+                <h3>Sandia National Laboratories</h3>
+                <h4>Autonomy Research and Development Intern</h4>
+                <p>
+Enhanced input rejection by 100% for image classifiers with a versatile Mahalanobis algorithm 
+                </p>
+            </div>
+
+
+            <div data-date="July 2024 – June 2025">
                 <h3>Union Capital Partners</h3>
                 <h4>Quantitative Researcher</h4>
                 <p>
-Built AI/ML models (Random Forest, XGBoost, LSTM) to predict market trends and automate stock trading.
-Developed APIs to enable real-time data collection, feature engineering, and trading bots with visual insights.
+Built XGBoost models with genetic optimization to forecast trends and select profitable short-term positions
+Automated 100% of trade execution using IBKR API and OOP with visual insights and custom tkinter GUI
                 </p>
             </div>
 
@@ -311,7 +320,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
 
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+        <h2 class="heading">Highlighted Projects</h2>
         <div class="container">
             <div class="row">
 
@@ -486,6 +495,36 @@ I've worked on lots of awesome projects I am passionate about in addition to tho
     <!-- End #projects -->
 
 
+
+
+
+
+
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+
+            <div data-date="2025">
+                <h3>ARC AGI Agent</h3>
+                <h4>Georgia Tech</h4>
+                <p>
+Description here.
+                </p>
+            </div>
+
+
+            <div data-date="2025">
+                <h3>Job Comparison App</h3>
+                <h4>Georgia Tech</h4>
+                <p>
+Description here.
+                </p>
+            </div>
+
+
+        </div>
+    </div>
+    <!-- End #experience -->
 
 
 
