--- a/index.html
+++ b/index.html
@@ -501,10 +501,10 @@ I've worked on lots of awesome projects I am passionate about in addition to tho
 
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading">Project Timeline</h2>
         <div id="experience-timeline">
 
-            <div data-date="2025">
+            <div data-date="October 2025">
                 <h3>ARC AGI Agent</h3>
                 <h4>Georgia Tech</h4>
                 <p>
@@ -513,7 +513,7 @@ Description here.
             </div>
 
 
-            <div data-date="2025">
+            <div data-date="April 2025">
                 <h3>Job Comparison App</h3>
                 <h4>Georgia Tech</h4>
                 <p>
@@ -524,7 +524,7 @@ Description here.
 
         </div>
     </div>
-    <!-- End #experience -->
+    <!-- End #project timeline -->
 
 
 
