add second timeline

--- a/index.html
+++ b/index.html
@@ -500,9 +500,9 @@ I've worked on lots of awesome projects I am passionate about in addition to tho
 
 
 
-    <div id="experience" class="background-alt">
+    <div id="additional-projects" class="background-alt">
         <h2 class="heading">Project Timeline</h2>
-        <div id="experience-timeline">
+        <div id="project-timeline">
 
             <div data-date="October 2025">
                 <h3>ARC AGI Agent</h3>
