try to fix styling

--- a/index.html
+++ b/index.html
@@ -521,6 +521,53 @@ Description here.
                 </p>
             </div>
 
+            <div data-date="April 2025">
+                <h3>Reinforcement Learning Stock Trader</h3>
+                <h4>Georgia Tech</h4>
+                <p>
+Description here.
+                </p>
+            </div>
+
+            <div data-date="March 2025">
+                <h3>Market Simulator</h3>
+                <h4>Georgia Tech</h4>
+                <p>
+Description here.
+                </p>
+            </div>
+
+            <div data-date="December 2025">
+                <h3>SLAM Drone Controller</h3>
+                <h4>Georgia Tech</h4>
+                <p>
+Description here.
+                </p>
+            </div>
+
+            <div data-date="November 2025">
+                <h3>Robotic Path Planning</h3>
+                <h4>Georgia Tech</h4>
+                <p>
+Description here.
+                </p>
+            </div>
+
+            <div data-date="October 2025">
+                <h3>Solar Navigation</h3>
+                <h4>Georgia Tech</h4>
+                <p>
+Description here.
+                </p>
+            </div>
+
+            <div data-date="October 2025">
+                <h3>Asteroid Hopscotch</h3>
+                <h4>Georgia Tech</h4>
+                <p>
+Description here.
+                </p>
+            </div>
 
         </div>
     </div>
